name:                   blank-slate
version:                0.1.0.0
license:                BSD3
license-file:           LICENSE
author:                 Trevor Elliott
maintainer:             awesomelyawesome@gmail.com
copyright:              2012 Trevor Elliott
category:               Graphics
build-type:             Configure
cabal-version:          >=1.8

extra-source-files:     cbits/sdl_opengl.h

library
  build-depends:        base        >= 4.5,
                        SDL         >= 0.6.4,
                        SDL-image   >= 0.6.1,
                        OpenGLRaw21 >= 1.2.0.1
  exposed-modules:      Graphics.BlankSlate,
                        Graphics.BlankSlate.Resource,
                        Graphics.BlankSlate.Texture
  hs-source-dirs:       src
  c-sources:            cbits/sdl-opengl.c
