name:                   blank-slate
version:                0.1.0.0
license:                BSD3
license-file:           LICENSE
author:                 Trevor Elliott
maintainer:             awesomelyawesome@gmail.com
copyright:              2012 Trevor Elliott
category:               Graphics
build-type:             Configure
cabal-version:          >=1.8

extra-source-files:     cbits/sdl_opengl.h
data-dir:               examples
data-files:             frag.glsl, vert.glsl

library
  build-depends:        base        >= 4.5,
                        array       >= 0.4.0.0,
                        SDL         >= 0.6.4,
                        SDL-image   >= 0.6.1,
                        OpenGLRaw   >= 1.2,
                        GLURaw      >= 1.2
  exposed-modules:      Graphics.BlankSlate,
                        Graphics.BlankSlate.Prim.Buffer,
                        Graphics.BlankSlate.Prim.Shader,
                        Graphics.BlankSlate.Prim.Texture
  hs-source-dirs:       src
  c-sources:            cbits/sdl-opengl.c
  ghc-options:          -Wall

executable blank-slate-test
  main-is:              Main.hs
  hs-source-dirs:       examples
  build-depends:        base        >= 4.5,
                        filepath    >= 1.3,
                        array       >= 0.4.0.0,
                        SDL         >= 0.6.4,
                        OpenGLRaw   >= 1.2,
                        blank-slate
  ghc-options:          -Wall -threaded
